--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-*{
-    scroll-behavior: smooth;
+* {
+  scroll-behavior: smooth;
 }
+
 ::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #FD3846; 
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #d15c64; 
-  }
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #FD3846;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #d15c64;
+}
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.markdown-content {
+  font-family: 'YourDesiredFont', sans-serif;
+  line-height: 1.6;
+  /* Improve readability */
+}
+
+.markdown-content h1,
+.markdown-content h2,
+.markdown-content h3 {
+  font-weight: bold;
+}
+
+.markdown-content ul {
+  list-style-type: disc;
+  /* Ensure unordered lists have bullets */
+  padding-left: 1.5em;
+  /* Add indentation */
+}
+
+.markdown-content li {
+  margin-bottom: 0.5em;
+  /* Space between list items */
+}
+
+.markdown-content p {
+  margin-bottom: 1em;
+  /* Space between paragraphs */
+}
