feat: create blog pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 * {
   scroll-behavior: smooth;
@@ -16,7 +16,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #FD3846;
+  background: #fd3846;
   border-radius: 10px;
 }
 
@@ -29,9 +29,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .markdown-content {
-  font-family: 'YourDesiredFont', sans-serif;
+  font-family: "YourDesiredFont", sans-serif;
   line-height: 1.6;
   /* Improve readability */
 }
